# componentnet

./: CMakeLists.hypergraph.txt.in  CMakeLists.txt  README.md
include/: ComponentNetwork.hpp  DomainSpecificGraph.hpp  Generator.hpp  HardwareComputationalNetwork.hpp  Mapper.hpp  ResourceCostModel.hpp  SoftwareGraph.hpp  SoftwareNetwork.hpp  VHDLGenerator.hpp
src/: CMakeLists.txt  ComponentNetwork.cpp  DomainSpecificGraph.cpp  Generator.cpp  HardwareComputationalNetwork.cpp  Mapper.cpp  ResourceCostModel.cpp  SoftwareGraph.cpp  SoftwareNetwork.cpp  VHDLGenerator.cpp
test/: CMakeLists.txt  createEmptyNetworks.cpp  testComponentNetwork.cpp  testDomainGraph.cpp  testGenerator.cpp  testHWNetwork.cpp  testHardwareComputationalNetwork.cpp  testMapping.cpp  testSoftwareNetwork.cpp
tools/: CMakeLists.txt  gen_cpp_class.cpp  gen_impl_networks.cpp  gen_vhdl_entity.cpp  sw2hw_map.cpp
